--- a/.github/workflows/publish-developer-edition.yml
+++ b/.github/workflows/publish-developer-edition.yml
@@ -2,6 +2,8 @@ name: Publish Developer Edition Version
 
 on:
   workflow_dispatch:
+  repository_dispatch:
+    types: [new-release]
 
 jobs:
   bump-version:
