--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@babel/preset-env": "~7.18.6",
 	  	"@babel/runtime": "^7.13.10",
 	  	"@babel/runtime-corejs3": "~7.18.6",
+        "@editor/history": "*",
         "@elementor/eslint-plugin-editor": "^0.4.0",
         "@playwright/test": "1.21.1",
         "@reach/router": "^1.3.3",
@@ -75,7 +76,6 @@
         "grunt-text-replace": "~0.4.0",
         "grunt-webpack": "^5.0.0",
         "grunt-wp-readme-to-markdown-with-extra": "~2.2.0",
-        "history": "*",
         "jest-environment-jsdom": "^28.1.3",
         "karma": "6.4.0",
         "karma-chrome-launcher": "3.1.1",
