--- a/packages/editor/packages/history/package.json
+++ b/packages/editor/packages/history/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "history",
+  "name": "@editor/history",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
