--- a/.github/workflows/config.json
+++ b/.github/workflows/config.json
@@ -2,6 +2,6 @@
   "deployment" : {
     "repository_owner" : "elementor",
     "environment" : "prod",
-    "permitted" : "KingYes,shilo-ey,matipojo"
+    "permitted" : "KingYes,shilo-ey,matipojo,TzviRabinovitch"
   }
 }
