--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   run:
     runs-on: ubuntu-20.04
-    if: startsWith( github.repository, 'elementor/' )
+    if: startsWith( github.repository, 'maork-elementor/' )
     steps:
       - name: Checkout source code
         uses: actions/checkout@master
