--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,11 +47,7 @@ jobs:
             | sed 's/[",]//g' \
             | tr -d '[[:space:]]')
           grunt build
-          PLUGIN_ZIP_FILENAME="elementor-${PACKAGE_VERSION}.zip"
-          PACKAGE_BASE_DIR="/tmp/elementor-releases/"
-          PACKAGE_PATH=$(ls $PACKAGE_BASE_DIR)
-          mv "${PACKAGE_BASE_DIR}/${PACKAGE_PATH}" ${PLUGIN_ZIP_FILENAME}
-          echo ${PACKAGE_PATH}
+          PLUGIN_ZIP_FILENAME="build/elementor-${PACKAGE_VERSION}.zip"
           echo "PLUGIN_ZIP_FILENAME=${PLUGIN_ZIP_FILENAME}" >> $GITHUB_ENV
           echo "PLUGIN_ZIP_PATH=$(pwd)/${PLUGIN_ZIP_FILENAME}" >> $GITHUB_ENV
           sed -i -E "s/Version: (.*?)/Version: ${PACKAGE_VERSION}-${PLUGIN_VERSION}/g" build/elementor.php
