--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,13 +3,13 @@ name: Build
 on:
   push:
     branches:
-      - 'master'
+      - 'develop'
       - 'release/*'
 
 jobs:
   run:
     runs-on: ubuntu-20.04
-    if: startsWith( github.repository, 'maork-elementor/' )
+    if: startsWith( github.repository, 'elementor/' )
     steps:
       - name: Checkout source code
         uses: actions/checkout@master
