--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - 'develop'
       - 'release/*'
-
+      - 'master'
 jobs:
   run:
     runs-on: ubuntu-20.04
-    if: startsWith( github.repository, 'elementor/' )
+    if: startsWith( github.repository, 'maork-elementor/' )
     steps:
       - name: Checkout source code
         uses: actions/checkout@master
@@ -46,10 +46,7 @@ jobs:
             | awk -F: '{ print $2 }' \
             | sed 's/[",]//g' \
             | tr -d '[[:space:]]')
-          grunt build
-          PLUGIN_ZIP_FILENAME="build/elementor-${PACKAGE_VERSION}.zip"
-          echo "PLUGIN_ZIP_FILENAME=${PLUGIN_ZIP_FILENAME}" >> $GITHUB_ENV
-          echo "PLUGIN_ZIP_PATH=$(pwd)/${PLUGIN_ZIP_FILENAME}" >> $GITHUB_ENV
+          bash "${GITHUB_WORKSPACE}/.github/scripts/build-zip.sh"
           sed -i -E "s/Version: (.*?)/Version: ${PACKAGE_VERSION}-${PLUGIN_VERSION}/g" build/elementor.php
           sed -i -E "s/ELEMENTOR_VERSION', '(.*?)'/ELEMENTOR_VERSION', '${PACKAGE_VERSION}-${PLUGIN_VERSION}'/g" build/elementor.php
           curl --fail -F "package=@${PLUGIN_ZIP_FILENAME}" "${{ secrets.DEPLOY_BUILDS_ENDPOINT}}&type=core"
