Internal: Playwright - Change default theme [ED-8597]

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -73,6 +73,7 @@ jobs:
           # change wp-env folder owner to www-data
           sudo chown 33:33 -R ~/wp-env/
           npx wp-env run tests-cli "bash -c 'bash elementor-config/setup.sh'"
+          npx wp-env run cli "wp theme activate twentytwentytwo"
       - name: WordPress debug information
         run: |
           npx wp-env run tests-cli "wp core version"
