--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,13 @@ name: Build
 
 on:
   push:
-  pull_request:
-
+    branches:
+      - 'develop'
+      - 'release/*'
 jobs:
   run:
     runs-on: ubuntu-20.04
-    # if: startsWith( github.repository, 'elementor/' )
+    if: startsWith( github.repository, 'elementor/' )
     steps:
       - name: Checkout source code
         uses: actions/checkout@master
