--- a/.github/workflows/js-qunit.yml
+++ b/.github/workflows/js-qunit.yml
@@ -24,6 +24,7 @@ jobs:
           PATTERNS: |
             **/*.+(js|ts|json|jsx|tsx)
             package*.json
+            ./github/**/*.yml
 
   q-unit:
     runs-on: ubuntu-18.04
