--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -24,7 +24,7 @@ jobs:
           PATTERNS: |
             **/*.php
             composer.json
-            ./github/**/*.yml
+            .github/**/*.yml
 
   test:
     runs-on: ubuntu-18.04 # It is ubuntu 18 because there are some issues with the mysql version and php 7.
