--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -24,7 +24,7 @@ jobs:
           PATTERNS: |
             **/*.+(js|ts|json|jsx|tsx)
             package*.json
-            ./github/**/*.yml
+            .github/**/*.yml
 
   jest:
     runs-on: ubuntu-20.04
