--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -57,7 +57,7 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - name: Install Dependencies
-        run: npm i
+        run: npm ci
       - name: Run Lint
         run: ./node_modules/eslint/bin/eslint.js .
 
