--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,7 +9,7 @@ concurrency:
 
 jobs:
   file-diff:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     name: Lint - File Diff
     if: startsWith( github.repository, 'elementor/' )
     outputs:
@@ -35,7 +35,7 @@ jobs:
             .github/**/*.yml
 
   JS-Lint:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     needs: [ 'file-diff' ]
     if: ${{ needs.file-diff.outputs.js_diff || github.ref == 'refs/heads/developer-edition' }}
     steps:
@@ -62,7 +62,7 @@ jobs:
         run: ./node_modules/eslint/bin/eslint.js .
 
   PHP-Lint:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     needs: [ 'file-diff' ]
     if: ${{ needs.file-diff.outputs.php_diff || github.ref == 'refs/heads/developer-edition' }}
     steps:
@@ -87,10 +87,10 @@ jobs:
           php7.4 vendor/bin/parallel-lint --blame --exclude node_modules --exclude vendor .
           php8.0 vendor/bin/parallel-lint --blame --exclude node_modules --exclude vendor .
           php8.1 vendor/bin/parallel-lint --blame --exclude node_modules --exclude vendor .
-      - name: Setup PHP 7.1 # not included in ubuntu 18.04
-        uses: shivammathur/setup-php@9882bed06691b3a085010c1602ce43ef18f15c5b # v2
-        with:
-          php-version: '7.1'
+      # - name: Setup PHP 7.1 # not included in ubuntu 18.04
+      #   uses: shivammathur/setup-php@9882bed06691b3a085010c1602ce43ef18f15c5b # v2
+      #   with:
+      #     php-version: '7.1'
       - name: Run PHP Syntax Lint 7.1
         run: |
           export PATH=$HOME/.composer/vendor/bin:$PATH
