Code Review Fixes

--- a/.github/workflows/elementor-tests.yml
+++ b/.github/workflows/elementor-tests.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
       - name: Block non-permitted users
         uses: StyleShit/action-whitelist-users@b8abcef5472afd0c7bcfaadf08c70a082437e459
         with:
