--- a/.github/workflows/screenshotter.yml
+++ b/.github/workflows/screenshotter.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           php-version: 7.4
       - name: Checkout source code
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
       - name: Install Node.js 18.x
         uses: actions/setup-node@v2
         with:
