--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -68,10 +68,10 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
-      - name: Setup PHP 7.1
-        uses: shivammathur/setup-php@v2
+      - name: Setup PHP 7.4
+        uses: shivammathur/setup-php@9882bed06691b3a085010c1602ce43ef18f15c5b # v2
         with:
-          php-version: '7.1'
+          php-version: '7.4'
       - name: Install Dependencies
         run: |
           composer install
@@ -82,9 +82,17 @@ jobs:
       - name: Run PHP Syntax Lint
         run: |
           export PATH=$HOME/.composer/vendor/bin:$PATH
-          php7.1 vendor/bin/parallel-lint --blame --exclude node_modules --exclude vendor .
           php7.2 vendor/bin/parallel-lint --blame --exclude node_modules --exclude vendor .
           php7.3 vendor/bin/parallel-lint --blame --exclude node_modules --exclude vendor .
           php7.4 vendor/bin/parallel-lint --blame --exclude node_modules --exclude vendor .
           php8.0 vendor/bin/parallel-lint --blame --exclude node_modules --exclude vendor .
           php8.1 vendor/bin/parallel-lint --blame --exclude node_modules --exclude vendor .
+      - name: Setup PHP 7.1 # not included in ubuntu 18.04
+        uses: shivammathur/setup-php@9882bed06691b3a085010c1602ce43ef18f15c5b # v2
+        with:
+          php-version: '7.1'
+      - name: Run PHP Syntax Lint 7.1
+        run: |
+          export PATH=$HOME/.composer/vendor/bin:$PATH
+          php -v
+          php vendor/bin/parallel-lint --blame --exclude node_modules --exclude vendor .
