--- a/.github/workflows/publish-developer-edition.yml
+++ b/.github/workflows/publish-developer-edition.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   bump-version:
-    if: (github.event_name == 'schedule' || github.event_name == 'repository_dispatch' || github.actor == 'yotamselementor' || github.actor == 'KingYes' || github.actor == 'TzviRabinovitch' || github.actor == 'matipojo') && startsWith(github.repository, 'elementor/')
+    if: (github.event_name == 'schedule' || github.event_name == 'repository_dispatch' || github.actor == 'yotamselementor' || github.actor == 'KingYes' || github.actor == 'TzviRabinovitch' || github.actor == 'matipojo' || github.actor == 'udidol') && startsWith(github.repository, 'elementor/')
     runs-on: ubuntu-20.04
     outputs:
       cancel_workflow: ${{ steps.step_compare.outputs.cancel_workflow }}
