--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "@babel/preset-env": "~7.18.6",
         "@babel/runtime-corejs3": "~7.18.6",
         "@elementor/eslint-plugin-editor": "^0.4.0",
-        "@playwright/test": "1.21.1",
+        "@playwright/test": "^1.28.0",
         "@reach/router": "^1.3.3",
         "@testing-library/dom": "^8.17.1",
         "@wordpress/babel-plugin-import-jsx-pragma": "~3.2.0",
@@ -44,7 +44,7 @@
         "babel-jest": "^28.1.2",
         "babel-loader": "8.2.5",
         "chalk": "^4.1.0",
-        "cssnano": "4.1.11",
+        "cssnano": "^5.1.14",
         "dotenv": "^16.0.2",
         "eslint": "^8.19.0",
         "eslint-plugin-babel": "^5.3.1",
