--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           PATTERNS: |
             **/*.php
+            ruleset.xml
             .github/**/*.yml
             composer.+(json|lock)
 
@@ -79,7 +80,7 @@ jobs:
           composer require php-parallel-lint/php-parallel-lint
       - name: Run Lint
         run: |
-          vendor/bin/phpcs -p -s -n . --standard=./phpcs.xml --extensions=php
+          vendor/bin/phpcs -p -s -n . --standard=./ruleset.xml --extensions=php  --report=csv
       - name: Run PHP Syntax Lint
         run: |
           export PATH=$HOME/.composer/vendor/bin:$PATH
