--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -74,8 +74,13 @@ jobs:
         run: npm ci
       - name: Install WordPress environment
         run: |
-          npm run run-local-server
-          npm run test:pre-playwright-sanity
+          npx wp-env start
+          # change wp-env folder owner to www-data
+          sudo chown 33:33 -R ~/wp-env/
+          npx wp-env run tests-cli "bash -c 'bash elementor-config/setup.sh'"
+          npx wp-env run cli "wp --user=admin elementor library import-dir elementor-playwright-templates"
+          npx wp-env run cli "wp rewrite structure \"/%postname%/\" --hard"
+          npx wp-env run cli "wp theme activate twentytwentytwo"
       - name: WordPress debug information
         run: |
           npx wp-env run tests-cli "wp core version"
