--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           npx wp-env start
           # change wp-env folder owner to www-data
-          sudo chown 33:33 -R ~/wp-env/
+          # sudo chown 33:33 -R ~/wp-env/
           npx wp-env run tests-cli "bash -c 'bash elementor-config/setup.sh'"
       - name: WordPress debug information
         if: matrix.wpCoreVersion != 'master' || github.event_name == 'schedule'
