--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -87,7 +87,7 @@ jobs:
         if: matrix.wpCoreVersion != 'master' || github.event_name == 'schedule'
         run: |
           npx wp-env start
-          npx wp-env run tests-cli "bash -c 'bash elementor-config/setup.sh'"
+          # npx wp-env run tests-cli "bash -c 'bash elementor-config/setup.sh'"
       - name: WordPress debug information
         if: matrix.wpCoreVersion != 'master' || github.event_name == 'schedule'
         run: |
