--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -74,11 +74,8 @@ jobs:
         run: npm ci
       - name: Install WordPress environment
         run: |
-          npx wp-env start
-          npx wp-env run tests-cli "bash -c 'bash elementor-config/setup.sh'"
-          npx wp-env run cli "wp --user=admin elementor library import-dir elementor-playwright-templates"
-          npx wp-env run cli "wp rewrite structure \"/%postname%/\" --hard"
-          npx wp-env run cli "wp theme activate twentytwentytwo"
+          npm run start-local-server
+          npm run test:setup-playwright-sanity
       - name: WordPress debug information
         run: |
           npx wp-env run tests-cli "wp core version"
